refactor: update instructions and configuration settings for webgraph           processing. Adapt to settings used to build           cc-main-2025-jan-feb-mar on Ubuntu 24.04 ARM using Java 21