@@ -35,8 +35,7 @@ case "$1" in
         # Java options for HyperBall, recommended in
         #  https://webgraph.di.unimi.it/docs/it/unimi/dsi/webgraph/algo/HyperBall.html
         JAVA_OPTS="$JAVA_OPTS -server -Xss256K -XX:PretenureSizeThreshold=512M -XX:MaxNewSize=$(($MEMMB/3))m \
-          -XX:+UseNUMA -XX:+UseTLAB -XX:+ResizeTLAB \
-          -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=99 -XX:+UseCMSInitiatingOccupancyOnly"
+          -XX:+UseNUMA -XX:+UseTLAB -XX:+ResizeTLAB"
     ;;
 esac
 
